apps/apprise/deployment-apprise.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apprise
  namespace: apprise
  labels:
    app: apprise
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: apprise
  template:
    metadata:
      labels:
        app: apprise
    spec:
      containers:
        - name: apprise
          image: caronc/apprise:latest
          ports:
            - containerPort: 8000
              name: http
          volumeMounts:
            - name: apprise-config-rendered
              mountPath: /config
          resources:
            requests:
              cpu: 50m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 1024Mi
      volumes:
        - name: apprise-config-template
          configMap:
            name: apprise-config
        - name: apprise-config-rendered
          emptyDir: {}
