apps/apprise/service-apprise.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: apprise
  namespace: monitoring
spec:
  selector:
    app: apprise
  ports:
    - name: http
      port: 8000
      targetPort: http
