apps/apprise/ingressroute-apprise.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apprise
  namespace: apprise
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`apprise.xrs444.net`)
      kind: Rule
      services:
        - name: apprise
          port: 8000
  tls:
    certResolver: letsencrypt
